k8s/msa-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: lgcns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      # docker container 
      containers:
        - name: kafka-container
          # 실행 중인 컨테이너를 이미지로 만들고 ECR 배포할 경우 ECR repo 주소 사용 가능
          image: wurstmeister/kafka
          ports:
          - containerPort: 9092
          - containerPort: 9093
---
# core service setting
# core group : pod, service, ConfigMap, Secret, namespace
apiVersion: v1 
kind: Service
metadata:
  name: kafka-service
  namespace: lgcns
spec:
  type: ClusterIP
  ports:
  - name: outside # 외부 접속용 포트
    port: 9092
    targetPort: 9092
  - name: inside  # 브로커 내부에서 통신용 사용 포트
    port: 9093
    targetPort: 9093
  selector:
    app: kafka
