k8s/msa-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: lgcns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pod

  template:
    metadata:
      labels:
        app: redis-pod 

    spec:
      # docker container 
      containers:
        - name: redis-container
          # 실행 중인 컨테이너를 이미지로 만들고 ECR 배포할 경우 ECR repo 주소 사용 가능
          image: redis
          ports:
          - containerPort: 6379

---
# core service setting
# core group : pod, service, ConfigMap, Secret, namespace
apiVersion: v1 
kind: Service
metadata:
  name: redis-service
  namespace: lgcns
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-pod
