k8s/msa-ingress.yml
# aws nlb -> ingress controller(pod) -> ingress -> service -> pod
# >>> ingress controller install
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: order-ingress
  namespace: lgcns
  annotations:
    # kubernetes.io/ingress.class: nginx 
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx 
  rules:
    # 레코드로 등록한 도메인 이름 
  - host: server.pinksaurus.shop
    http:
      paths:
        # http://server.pinksaurus.shop/
      - path: /
        pathType: Prefix
        backend:
          service:
            # routing:
            # http://server.pinksaurus.shop/user-service
            # http://server.pinksaurus.shop/product-service
            # http://server.pinksaurus.shop/order-service
            name: apigateway-service
            port:
              number: 80
